--- a/sep01/test/index.html
+++ b/sep01/test/index.html
@@ -27,7 +27,7 @@
         <label for="name" class="col-lg-2 control-label">Bid Value</label>
         <input id="bids" type="text">
 
-        <button id="button">Update Instructor</button>
+        <button id="button">Update Driver</button>
 
 
     </div>
@@ -42,11 +42,11 @@
             web3 = new Web3(new Web3.providers.HttpProvider("http://localhost:8545"));
         }
         web3.eth.defaultAccount = web3.eth.accounts[0];
-        var CoursetroContract = web3.eth.contract(PASTE ABI HERE!);
-        var Coursetro = CoursetroContract.at('PASTE CONTRACT ADDRESS HERE');
-        console.log(Coursetro);
-
-    </script>
+        var DUberContract = web3.eth.contract(PASTE ABI HERE!);
+        var DUberC = CoursetroContract.at('PASTE CONTRACT ADDRESS HERE');
+        console.log(DUberC);
+        //coding for adding values pending 
+            </script>
 
 </body>
 </html>
